--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,15 +1,13 @@
 [kigconfig]
 log = True
-APP_ID = https://my.telegram.org
-API_HASH = https://my.telegram.org
-TOKEN = https://t.me/BotFather
-OWNER_ID = 895373440
-OWNER_USERNAME = dank_as_fuck
-SQLALCHEMY_DATABASE_URI = postgres db url
-MESSAGE_DUMP = -1001451724150
-GBAN_LOGS = -1001451724150
-SYS_ADMIN =
-LOAD =
+APP_ID = 8529843
+API_HASH = 6e06fb8f7b42fb33821f272597321bc1
+TOKEN = 5165466933:AAHNWGQ8-j9Dt-ZWWWAGrpy5G3gGXFciT00
+OWNER_ID = 2133434438
+OWNER_USERNAME = saya_wiki
+SQLALCHEMY_DATABASE_URI = postgres://ctarxcur:KAqJB1W96XW0nMLJwkWfvXuN6w1cbfUs@peanut.db.elephantsql.com/ctarxcur
+MESSAGE_DUMP = -1001632507151
+GBAN_LOGS = -1001632507151
 NO_LOAD = sed
 WEBHOOK = False
 SPB_MODE = True
@@ -19,14 +17,9 @@ CERT_PATH = None
 PORT = 5000
 DEL_CMDS = True
 STRICT_GBAN = True
-BAN_STICKER =
 ALLOW_EXCL = True
 CUSTOM_CMD = False
-CASH_API_KEY = https://www.alphavantage.co/support/#api-key
-TIME_API_KEY = https://timezonedb.com/api
+CASH_API_KEY = HOQ7F5PPUJYQEGNZ
+TIME_API_KEY = 6X3UZU33JOWX
 WALL_API = https://wall.alphacoders.com/api.php
-spamwatch_api = https://t.me/SpamWatchBot
-SPAMMERS =
-LASTFM_API_KEY = https://www.last.fm/api/account/create
-BOT_API_URL = https://api.telegram.org/bot
-BOT_API_FILE_URL = https://api.telegram.org/file/bot
+spamwatch_api = dnOBMh8dS4AqaYrya~2q591m_U2Fq2sfR_qhtwPrchi1oDWi05Y9O8pmGZ5pc9BT
