--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ OWNER_USERNAME = saya_wiki
 SQLALCHEMY_DATABASE_URI = postgres://ctarxcur:KAqJB1W96XW0nMLJwkWfvXuN6w1cbfUs@peanut.db.elephantsql.com/ctarxcur
 MESSAGE_DUMP = -1001632507151
 GBAN_LOGS = -1001632507151
-LOAD = True
+LOAD = False
 NO_LOAD = sed
 WEBHOOK = False
 SPB_MODE = True
